--- a/event.html
+++ b/event.html
@@ -243,7 +243,7 @@
     <div class="wsus__event_page mt_95 xs_mt_75">
         <div class="container">
             <div class="row">
-                <div class="col-xl-6">
+                <div class="col-lg-6">
                     <div class="wsus__single_event_2 d-flex flex-wrap">
                         <a class="wsus__single_event_2_img" href="#">
                             <img src="images/event_2_img_1.png" alt="Event" class="img-fluid">
@@ -261,7 +261,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-xl-6">
+                <div class="col-lg-6">
                     <div class="wsus__single_event_2 d-flex flex-wrap">
                         <a class="wsus__single_event_2_img" href="#">
                             <img src="images/event_2_img_2.png" alt="Event" class="img-fluid">
@@ -279,7 +279,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-xl-6">
+                <div class="col-lg-6">
                     <div class="wsus__single_event_2 d-flex flex-wrap">
                         <a class="wsus__single_event_2_img" href="#">
                             <img src="images/event_2_img_3.png" alt="Event" class="img-fluid">
@@ -297,7 +297,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-xl-6">
+                <div class="col-lg-6">
                     <div class="wsus__single_event_2 d-flex flex-wrap">
                         <a class="wsus__single_event_2_img" href="#">
                             <img src="images/event_2_img_4.png" alt="Event" class="img-fluid">
@@ -315,7 +315,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-xl-6">
+                <div class="col-lg-6">
                     <div class="wsus__single_event_2 d-flex flex-wrap">
                         <a class="wsus__single_event_2_img" href="#">
                             <img src="images/event_2_img_5.png" alt="Event" class="img-fluid">
@@ -333,7 +333,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-xl-6">
+                <div class="col-lg-6">
                     <div class="wsus__single_event_2 d-flex flex-wrap">
                         <a class="wsus__single_event_2_img" href="#">
                             <img src="images/event_2_img_6.png" alt="Event" class="img-fluid">
