--- a/event_details.html
+++ b/event_details.html
@@ -243,7 +243,7 @@
     <div class="wsus__event_details wsus__portfolio_details mt_120 xs_mt_100">
         <div class="container">
             <div class="row">
-                <div class="col-xl-8">
+                <div class="col-lg-8">
                     <div class="wsus__service_details">
                         <div class="wsus__details_thumbnail">
                             <img src="images/event_details_thumbnail.png" alt="Services" class="img-fluid">
@@ -278,12 +278,12 @@
                                 markets with global schemas.</p>
                         </div>
                         <div class="row">
-                            <div class="col-xl-6">
+                            <div class="col-md-6">
                                 <div class="wsus__service_details_center_img">
                                     <img src="images/service_det_center_img_1.jpg" alt="Service" class="img-fluid">
                                 </div>
                             </div>
-                            <div class="col-xl-6">
+                            <div class="col-md-6">
                                 <div class="wsus__service_details_center_img">
                                     <img src="images/service_det_center_img_2.jpg" alt="Service" class="img-fluid">
                                 </div>
@@ -407,7 +407,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-xl-4">
+                <div class="col-lg-4">
                     <div class="wsus__details_sidebar">
                         <div class="sidebar_category">
                             <h3>*Events Details</h3>
