--- a/faq.html
+++ b/faq.html
@@ -243,7 +243,7 @@
     <div class="wsus__faq_page mt_110 xs_mt_90">
         <div class="container">
             <div class="row">
-                <div class="col-xl-5">
+                <div class="col-md-5">
                     <div class="wsus__faq_text m-0">
                         <div class="section_heading heading_left mb_15">
                             <h2>We help to achieve mutual goals.</h2>
@@ -264,7 +264,7 @@
                         </ul>
                     </div>
                 </div>
-                <div class="col-xl-7">
+                <div class="col-md-7">
                     <div class="wsus__accordian_area">
                         <div class="accordion" id="accordionExample">
                             <div class="accordion-item">
