--- a/payment.html
+++ b/payment.html
@@ -247,61 +247,61 @@
                     <div class="wsus__payment_option">
                         <h5>Select your payment option</h5>
                         <div class="row">
-                            <div class="col-sm-6 col-md-4 col-lg-3 col-xl-3 wow fadeInUp">
+                            <div class="col-6 col-sm-4 col-lg-3 col-xl-3 wow fadeInUp">
                                 <a href="#" class="wsus__payment_method" data-bs-toggle="modal"
                                     data-bs-target="#exampleModal">
                                     <img src="images/payment_1.png" alt="payment" class="img-fluid w-100">
                                 </a>
                             </div>
-                            <div class="col-sm-6 col-md-4 col-lg-3 col-xl-3 wow fadeInUp">
+                            <div class="col-6 col-sm-4 col-lg-3 col-xl-3 wow fadeInUp">
                                 <a href="#" class="wsus__payment_method" data-bs-toggle="modal"
                                     data-bs-target="#exampleModal">
                                     <img src="images/payment_2.png" alt="payment" class="img-fluid w-100">
                                 </a>
                             </div>
-                            <div class="col-sm-6 col-md-4 col-lg-3 col-xl-3 wow fadeInUp">
+                            <div class="col-6 col-sm-4 col-lg-3 col-xl-3 wow fadeInUp">
                                 <a href="#" class="wsus__payment_method" data-bs-toggle="modal"
                                     data-bs-target="#exampleModal">
                                     <img src="images/payment_3.png" alt="payment" class="img-fluid w-100">
                                 </a>
                             </div>
-                            <div class="col-sm-6 col-md-4 col-lg-3 col-xl-3 wow fadeInUp">
+                            <div class="col-6 col-sm-4 col-lg-3 col-xl-3 wow fadeInUp">
                                 <a href="#" class="wsus__payment_method" data-bs-toggle="modal"
                                     data-bs-target="#exampleModal">
                                     <img src="images/payment_4.png" alt="payment" class="img-fluid w-100">
                                 </a>
                             </div>
-                            <div class="col-sm-6 col-md-4 col-lg-3 col-xl-3 wow fadeInUp">
+                            <div class="col-6 col-sm-4 col-lg-3 col-xl-3 wow fadeInUp">
                                 <a href="#" class="wsus__payment_method" data-bs-toggle="modal"
                                     data-bs-target="#exampleModal">
                                     <img src="images/payment_5.png" alt="payment" class="img-fluid w-100">
                                 </a>
                             </div>
-                            <div class="col-sm-6 col-md-4 col-lg-3 col-xl-3 wow fadeInUp">
+                            <div class="col-6 col-sm-4 col-lg-3 col-xl-3 wow fadeInUp">
                                 <a href="#" class="wsus__payment_method" data-bs-toggle="modal"
                                     data-bs-target="#exampleModal">
                                     <img src="images/payment_6.png" alt="payment" class="img-fluid w-100">
                                 </a>
                             </div>
-                            <div class="col-sm-6 col-md-4 col-lg-3 col-xl-3 wow fadeInUp">
+                            <div class="col-6 col-sm-4 col-lg-3 col-xl-3 wow fadeInUp">
                                 <a href="#" class="wsus__payment_method" data-bs-toggle="modal"
                                     data-bs-target="#exampleModal">
                                     <img src="images/payment_7.png" alt="payment" class="img-fluid w-100">
                                 </a>
                             </div>
-                            <div class="col-sm-6 col-md-4 col-lg-3 col-xl-3 wow fadeInUp">
+                            <div class="col-6 col-sm-4 col-lg-3 col-xl-3 wow fadeInUp">
                                 <a href="#" class="wsus__payment_method" data-bs-toggle="modal"
                                     data-bs-target="#exampleModal">
                                     <img src="images/payment_8.png" alt="payment" class="img-fluid w-100">
                                 </a>
                             </div>
-                            <div class="col-sm-6 col-md-4 col-lg-3 col-xl-3 wow fadeInUp">
+                            <div class="col-6 col-sm-4 col-lg-3 col-xl-3 wow fadeInUp">
                                 <a href="#" class="wsus__payment_method" data-bs-toggle="modal"
                                     data-bs-target="#exampleModal">
                                     <img src="images/payment_2.png" alt="payment" class="img-fluid w-100">
                                 </a>
                             </div>
-                            <div class="col-sm-6 col-md-4 col-lg-3 col-xl-3 wow fadeInUp">
+                            <div class="col-6 col-sm-4 col-lg-3 col-xl-3 wow fadeInUp">
                                 <a href="#" class="wsus__payment_method" data-bs-toggle="modal"
                                     data-bs-target="#exampleModal">
                                     <img src="images/payment_3.png" alt="payment" class="img-fluid w-100">
