--- a/photo_gallery.html
+++ b/photo_gallery.html
@@ -243,7 +243,7 @@
     <div class="wsus__photo_gallery mt_115 xs_mt_95">
         <div class="container">
             <div class="row">
-                <div class="col-12">
+                <div class="col-lg-12">
                     <div class="wsus__pgoto_filter">
                         <button type="button" class="active" data-filter="*">View All</button>
                         <button type="button" data-filter=".business"> Business Services </button>
@@ -255,7 +255,7 @@
                 </div>
             </div>
             <div class="row grid">
-                <div class="col-xl-4 business development">
+                <div class="col-lg-4 col-md-6 business development">
                     <a class="wsus__photo_gallery_item venobox" data-gall="gallery01" href="images/gallery_img_1.jpg">
                         <img src="images/gallery_img_1.jpg" alt="gallery1" class="img-fluid w-100">
                         <span class="gal_img_overlay">
@@ -263,7 +263,7 @@
                         </span>
                     </a>
                 </div>
-                <div class="col-xl-4 technology finance">
+                <div class="col-lg-4 col-md-6 technology finance">
                     <a class="wsus__photo_gallery_item venobox" data-gall="gallery01" href="images/gallery_img_2.jpg">
                         <img src="images/gallery_img_2.jpg" alt="gallery1" class="img-fluid w-100">
                         <span class="gal_img_overlay">
@@ -271,7 +271,7 @@
                         </span>
                     </a>
                 </div>
-                <div class="col-xl-4 marketing finance">
+                <div class="col-lg-4 col-md-6 marketing finance">
                     <a class="wsus__photo_gallery_item venobox" data-gall="gallery01" href="images/gallery_img_3.jpg">
                         <img src="images/gallery_img_3.jpg" alt="gallery1" class="img-fluid w-100">
                         <span class="gal_img_overlay">
@@ -279,7 +279,7 @@
                         </span>
                     </a>
                 </div>
-                <div class="col-xl-4 business finance">
+                <div class="col-lg-4 col-md-6 business finance">
                     <a class="wsus__photo_gallery_item venobox" data-gall="gallery01" href="images/gallery_img_3.jpg">
                         <img src="images/gallery_img_4.jpg" alt="gallery1" class="img-fluid w-100">
                         <span class="gal_img_overlay">
@@ -287,7 +287,7 @@
                         </span>
                     </a>
                 </div>
-                <div class="col-xl-4 technology development">
+                <div class="col-lg-4 col-md-6 technology development">
                     <a class="wsus__photo_gallery_item venobox" data-gall="gallery01" href="images/gallery_img_3.jpg">
                         <img src="images/gallery_img_5.jpg" alt="gallery1" class="img-fluid w-100">
                         <span class="gal_img_overlay">
@@ -295,7 +295,7 @@
                         </span>
                     </a>
                 </div>
-                <div class="col-xl-4 business development">
+                <div class="col-lg-4 col-md-6 business development">
                     <a class="wsus__photo_gallery_item venobox" data-gall="gallery01" href="images/gallery_img_3.jpg">
                         <img src="images/gallery_img_6.jpg" alt="gallery1" class="img-fluid w-100">
                         <span class="gal_img_overlay">
@@ -303,7 +303,7 @@
                         </span>
                     </a>
                 </div>
-                <div class="col-xl-4 technology finance">
+                <div class="col-lg-4 col-md-6 technology finance">
                     <a class="wsus__photo_gallery_item venobox" data-gall="gallery01" href="images/gallery_img_3.jpg">
                         <img src="images/gallery_img_7.jpg" alt="gallery1" class="img-fluid w-100">
                         <span class="gal_img_overlay">
@@ -311,7 +311,7 @@
                         </span>
                     </a>
                 </div>
-                <div class="col-xl-4 business development">
+                <div class="col-lg-4 col-md-6 business development">
                     <a class="wsus__photo_gallery_item venobox" data-gall="gallery01" href="images/gallery_img_3.jpg">
                         <img src="images/gallery_img_8.jpg" alt="gallery1" class="img-fluid w-100">
                         <span class="gal_img_overlay">
@@ -319,7 +319,7 @@
                         </span>
                     </a>
                 </div>
-                <div class="col-xl-4 marketing finance">
+                <div class="col-lg-4 col-md-6 marketing finance">
                     <a class="wsus__photo_gallery_item venobox" data-gall="gallery01" href="images/gallery_img_3.jpg">
                         <img src="images/gallery_img_9.jpg" alt="gallery1" class="img-fluid w-100">
                         <span class="gal_img_overlay">
