--- a/portfolio.html
+++ b/portfolio.html
@@ -243,7 +243,7 @@
     <div class="wsus__portfolio_page mt_95 xs_mt_75">
         <div class="container">
             <div class="row">
-                <div class="col-xl-4">
+                <div class="col-lg-4 col-md-6">
                     <a class="wsus_portfolio_item" href="#">
                         <img src="images/portfolio_img_4.png" alt="Portfolio" class="img-fluid">
                         <div class="wsus_portfolio_text">
@@ -252,7 +252,7 @@
                         </div>
                     </a>
                 </div>
-                <div class="col-xl-4">
+                <div class="col-lg-4 col-md-6">
                     <a class="wsus_portfolio_item" href="#">
                         <img src="images/portfolio_img_5.png" alt="Portfolio" class="img-fluid">
                         <div class="wsus_portfolio_text">
@@ -261,7 +261,7 @@
                         </div>
                     </a>
                 </div>
-                <div class="col-xl-4">
+                <div class="col-lg-4 col-md-6">
                     <a class="wsus_portfolio_item" href="#">
                         <img src="images/portfolio_img_6.png" alt="Portfolio" class="img-fluid">
                         <div class="wsus_portfolio_text">
@@ -270,7 +270,7 @@
                         </div>
                     </a>
                 </div>
-                <div class="col-xl-4">
+                <div class="col-lg-4 col-md-6">
                     <a class="wsus_portfolio_item" href="#">
                         <img src="images/portfolio_img_1.png" alt="Portfolio" class="img-fluid">
                         <div class="wsus_portfolio_text">
@@ -279,7 +279,7 @@
                         </div>
                     </a>
                 </div>
-                <div class="col-xl-4">
+                <div class="col-lg-4 col-md-6">
                     <a class="wsus_portfolio_item" href="#">
                         <img src="images/portfolio_img_2.png" alt="Portfolio" class="img-fluid">
                         <div class="wsus_portfolio_text">
@@ -288,7 +288,7 @@
                         </div>
                     </a>
                 </div>
-                <div class="col-xl-4">
+                <div class="col-lg-4 col-md-6">
                     <a class="wsus_portfolio_item" href="#">
                         <img src="images/portfolio_img_3.png" alt="Portfolio" class="img-fluid">
                         <div class="wsus_portfolio_text">
