--- a/services.html
+++ b/services.html
@@ -243,7 +243,7 @@
     <div class="wsus__services_page mt_95 xs_mt_75">
         <div class="container">
             <div class="row">
-                <div class="col-xl-4">
+                <div class="col-xl-4 col-md-6">
                     <div class="wsus__features_item">
                         <div class="wsus__features_img">
                             <img src="images/features_img_1.jpg" alt="Features" class="img-fluid">
@@ -258,7 +258,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-xl-4">
+                <div class="col-xl-4 col-md-6">
                     <div class="wsus__features_item">
                         <div class="wsus__features_img">
                             <img src="images/features_img_2.jpg" alt="Features" class="img-fluid">
@@ -273,7 +273,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-xl-4">
+                <div class="col-xl-4 col-md-6">
                     <div class="wsus__features_item">
                         <div class="wsus__features_img">
                             <img src="images/features_img_3.jpg" alt="Features" class="img-fluid">
@@ -288,7 +288,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-xl-4">
+                <div class="col-xl-4 col-md-6">
                     <div class="wsus__features_item">
                         <div class="wsus__features_img">
                             <img src="images/features_img_4.jpg" alt="Features" class="img-fluid">
@@ -303,7 +303,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-xl-4">
+                <div class="col-xl-4 col-md-6">
                     <div class="wsus__features_item">
                         <div class="wsus__features_img">
                             <img src="images/features_img_3.jpg" alt="Features" class="img-fluid">
@@ -318,7 +318,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-xl-4">
+                <div class="col-xl-4 col-md-6">
                     <div class="wsus__features_item">
                         <div class="wsus__features_img">
                             <img src="images/features_img_1.jpg" alt="Features" class="img-fluid">
