--- a/sign_in.html
+++ b/sign_in.html
@@ -241,49 +241,52 @@
         SIGN IN START
     ============================-->
     <section class="wsus__sign_in mt_120 xs_mt_100">
-        <div class="row align-items-center">
-            <div class="col-xl-4 m-auto">
-                <div class="wsus__sign_form_area">
-                    <form action="#">
-                        <h2>Log in<span>!</span></h2>
-                        <p class="new_user">New User ? <a href="sign_up.html">Create an Account</a></p>
-                        <div class="row">
-                            <div class="col-xl-12">
-                                <div class="wsus__login_form_input">
-                                    <label>Email or Username*</label>
-                                    <input type="text" placeholder="Email or Username">
-                                </div>
-                            </div>
-                            <div class="col-xl-12">
-                                <div class="wsus__login_form_input">
-                                    <label>Password* <a href="#">Forgot Password?</a></label>
-                                    <input type="password" placeholder="Password">
-                                </div>
-                            </div>
-                            <div class="col-xl-12">
-                                <div class="wsus__login_form_input">
-                                    <div class="form-check">
-                                        <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
-                                        <label class="form-check-label" for="flexCheckDefault">
-                                            Remember Me
-                                        </label>
+        <div class="container">
+            <div class="row align-items-center">
+                <div class="col-xxl-4 col-md-10 col-lg-8 col-xl-6 m-auto">
+                    <div class="wsus__sign_form_area">
+                        <form action="#">
+                            <h2>Log in<span>!</span></h2>
+                            <p class="new_user">New User ? <a href="sign_up.html">Create an Account</a></p>
+                            <div class="row">
+                                <div class="col-xl-12">
+                                    <div class="wsus__login_form_input">
+                                        <label>Email or Username*</label>
+                                        <input type="text" placeholder="Email or Username">
                                     </div>
-                                    <button type="submit" class="common_btn">Sign In</button>
+                                </div>
+                                <div class="col-xl-12">
+                                    <div class="wsus__login_form_input">
+                                        <label>Password* <a href="#">Forgot Password?</a></label>
+                                        <input type="password" placeholder="Password">
+                                    </div>
+                                </div>
+                                <div class="col-xl-12">
+                                    <div class="wsus__login_form_input">
+                                        <div class="form-check">
+                                            <input class="form-check-input" type="checkbox" value=""
+                                                id="flexCheckDefault">
+                                            <label class="form-check-label" for="flexCheckDefault">
+                                                Remember Me
+                                            </label>
+                                        </div>
+                                        <button type="submit" class="common_btn">Sign In</button>
+                                    </div>
                                 </div>
                             </div>
-                        </div>
-                    </form>
-                    <p class="or">or</p>
-                    <ul class="social_login d-flex flex-wrap">
-                        <li>
-                            <a href="#">
-                                <span><img src="images/google_icon.png" alt="Google" class="img-fluid"></span>
-                                Google
-                            </a>
-                        </li>
-                    </ul>
-                    <p class="create_account">Don't have an account? <a href="sign_up.html">Create free
-                            account</a></p>
+                        </form>
+                        <p class="or">or</p>
+                        <ul class="social_login d-flex flex-wrap">
+                            <li>
+                                <a href="#">
+                                    <span><img src="images/google_icon.png" alt="Google" class="img-fluid"></span>
+                                    Google
+                                </a>
+                            </li>
+                        </ul>
+                        <p class="create_account">Don't have an account? <a href="sign_up.html">Create free
+                                account</a></p>
+                    </div>
                 </div>
             </div>
         </div>
