--- a/team.html
+++ b/team.html
@@ -243,7 +243,7 @@
     <div class="wsus__team_page mt_95 xs_mt_75">
         <div class="container">
             <div class="row">
-                <div class="col-xl-3">
+                <div class="col-xl-3 col-sm-6 col-lg-4">
                     <div class="wsus__single_team">
                         <div class="wsus__single_img">
                             <img src="images/team_img_1.jpg" alt="Team" class="img-fluid">
@@ -261,7 +261,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-xl-3">
+                <div class="col-xl-3 col-sm-6 col-lg-4">
                     <div class="wsus__single_team">
                         <div class="wsus__single_img">
                             <img src="images/team_img_2.jpg" alt="Team" class="img-fluid">
@@ -279,7 +279,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-xl-3">
+                <div class="col-xl-3 col-sm-6 col-lg-4">
                     <div class="wsus__single_team">
                         <div class="wsus__single_img">
                             <img src="images/team_img_3.jpg" alt="Team" class="img-fluid">
@@ -297,7 +297,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-xl-3">
+                <div class="col-xl-3 col-sm-6 col-lg-4">
                     <div class="wsus__single_team">
                         <div class="wsus__single_img">
                             <img src="images/team_img_4.jpg" alt="Team" class="img-fluid">
@@ -315,7 +315,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-xl-3">
+                <div class="col-xl-3 col-sm-6 col-lg-4">
                     <div class="wsus__single_team">
                         <div class="wsus__single_img">
                             <img src="images/team_img_5.jpg" alt="Team" class="img-fluid">
@@ -333,7 +333,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-xl-3">
+                <div class="col-xl-3 col-sm-6 col-lg-4">
                     <div class="wsus__single_team">
                         <div class="wsus__single_img">
                             <img src="images/team_img_6.jpg" alt="Team" class="img-fluid">
@@ -351,7 +351,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-xl-3">
+                <div class="col-xl-3 col-sm-6 col-lg-4">
                     <div class="wsus__single_team">
                         <div class="wsus__single_img">
                             <img src="images/team_img_7.jpg" alt="Team" class="img-fluid">
@@ -369,7 +369,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-xl-3">
+                <div class="col-xl-3 col-sm-6 col-lg-4">
                     <div class="wsus__single_team">
                         <div class="wsus__single_img">
                             <img src="images/team_img_8.jpg" alt="Team" class="img-fluid">
