--- a/video_gallery.html
+++ b/video_gallery.html
@@ -243,7 +243,7 @@
     <div class="wsus__video_gallery_page mt_95 xs_mt_75">
         <div class="container">
             <div class="row">
-                <div class="col-xl-6">
+                <div class="col-lg-6">
                     <div class="wsus__video_gallery_item">
                         <iframe src="https://www.youtube.com/embed/rD3e6avEOKc?si=uEAsL5HI4RaYLaDl"
                             title="YouTube video player"
@@ -251,7 +251,7 @@
                             referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                     </div>
                 </div>
-                <div class="col-xl-6">
+                <div class="col-lg-6">
                     <div class="wsus__video_gallery_item">
                         <iframe src="https://www.youtube.com/embed/cR_D3vBhh6U?si=8C5RwTlb-CjuImLe"
                             title="YouTube video player"
@@ -259,7 +259,7 @@
                             referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                     </div>
                 </div>
-                <div class="col-xl-6">
+                <div class="col-lg-6">
                     <div class="wsus__video_gallery_item">
                         <iframe src="https://www.youtube.com/embed/AQleI8oFqZo?si=MJYbHZqoPA7b2te-"
                             title="YouTube video player"
@@ -267,7 +267,7 @@
                             referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                     </div>
                 </div>
-                <div class="col-xl-6">
+                <div class="col-lg-6">
                     <div class="wsus__video_gallery_item">
                         <iframe src="https://www.youtube.com/embed/NE7F0f2-rtA?si=B929W6bnN8aWuNtD"
                             title="YouTube video player"
@@ -275,7 +275,7 @@
                             referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                     </div>
                 </div>
-                <div class="col-xl-6">
+                <div class="col-lg-6">
                     <div class="wsus__video_gallery_item">
                         <iframe src="https://www.youtube.com/embed/jLRXicRdNCQ?si=912R2GUPjmFv3aj9"
                             title="YouTube video player"
@@ -283,7 +283,7 @@
                             referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                     </div>
                 </div>
-                <div class="col-xl-6">
+                <div class="col-lg-6">
                     <div class="wsus__video_gallery_item">
                         <iframe src="https://www.youtube.com/embed/SHnbR4FCCI0?si=ccZQxXrBa3wiyw_I"
                             title="YouTube video player"
