--- a/error.html
+++ b/error.html
@@ -28,8 +28,8 @@
     ============================-->
     <section class="wsus__error_page">
         <div class="container">
-            <div class="row">
-                <div class="col-xxl-8 col-md-10 col-lg-9 col-xl-8 m-auto">
+            <div class="row justify-content-center">
+                <div class="col-xxl-6 col-sm-10 col-md-8 col-lg-7">
                     <div class="wsus__error_area wow fadeInUp">
                         <div class="img">
                             <img src="images/error_img.png" alt="Error" class="img-fluid">
@@ -45,6 +45,19 @@
     <!--===========================
         ERROR PAGE END
     ============================-->
+
+
+    <!--================================
+        SCROLL BUTTON START
+    =================================-->
+    <div class="progress-wrap">
+        <svg class="progress-circle svg-content" width="100%" height="100%" viewBox="-1 -1 102 102">
+            <path d="M50,1 a49,49 0 0,1 0,98 a49,49 0 0,1 0,-98" />
+        </svg>
+    </div>
+    <!--================================
+        SCROLL BUTTON END
+    =================================-->
 
 
     <!--jquery library js-->
