--- a/pricing.html
+++ b/pricing.html
@@ -243,7 +243,7 @@
     <section class="wsus__pricing_page mt_95 xs_mt_75">
         <div class="container">
             <div class="row">
-                <div class="col-xl-4">
+                <div class="col-lg-4 col-md-6">
                     <div class="wsus__single_pricing">
                         <h4>Standard</h4>
                         <p>Nullam ncidunt torto ac maximus odio ipsum sed id mauris.</p>
@@ -257,7 +257,7 @@
                         <a class="common_btn" href="#">Purchase Plan</a>
                     </div>
                 </div>
-                <div class="col-xl-4">
+                <div class="col-lg-4 col-md-6">
                     <div class="wsus__single_pricing active">
                         <h4>Standard</h4>
                         <p>Nullam ncidunt torto ac maximus odio ipsum sed id mauris.</p>
@@ -271,7 +271,7 @@
                         <a class="common_btn" href="#">Purchase Plan</a>
                     </div>
                 </div>
-                <div class="col-xl-4">
+                <div class="col-lg-4 col-md-6">
                     <div class="wsus__single_pricing">
                         <h4>Business</h4>
                         <p>Nullam ncidunt torto ac maximus odio ipsum sed id mauris.</p>
