--- a/product.html
+++ b/product.html
@@ -243,7 +243,7 @@
     <section class="wsus__product_page pt_95 xs_pt_75">
         <div class="container">
             <div class="row">
-                <div class="col-lg-4 col-xl-3">
+                <div class="col-lg-4 col-xl-3 order-2 order-lg-1">
                     <form action="#" class="wsus__product__sidebar">
 
                         <div class="wsus__product_searchbox">
@@ -339,7 +339,7 @@
 
                     </form>
                 </div>
-                <div class="col-lg-8 col-xl-9">
+                <div class="col-lg-8 col-xl-9 order-lg-1">
                     <div class="row">
                         <div class="col-sm-6 col-lg-6 col-xl-4 wow fadeInUp">
                             <div class="wsus__product_item">
