--- a/product_details.html
+++ b/product_details.html
@@ -243,7 +243,7 @@
     <section class="wsus__product_details mt_120 xs_mt_100 mb_110 xs_mb_90">
         <div class="container">
             <div class="row">
-                <div class="col-lg-6 col-xl-5 wow fadeInLeft">
+                <div class="col-lg-6 col-xl-5 col-md-9 wow fadeInLeft">
                     <div class="wsus__product_details_slider_area">
                         <div class="row slider-forFive">
                             <div class="col-xl-12">
