--- a/sign_up.html
+++ b/sign_up.html
@@ -241,70 +241,73 @@
         SIGN UP START
     ============================-->
     <section class="wsus__sign_up mt_120 xs_mt_100">
-        <div class="row align-items-center">
-            <div class="col-xl-4 m-auto">
-                <div class="wsus__sign_form_area">
-                    <form action="#">
-                        <h2>Sign Up<span>!</span></h2>
-                        <p class="new_user">Already have an account? <a href="sign_in.html">Sign in</a></p>
-                        <div class="row">
-                            <div class="col-xl-12">
-                                <div class="wsus__login_form_input">
-                                    <label>Name</label>
-                                    <input type="text" placeholder="Name">
-                                </div>
-                            </div>
-                            <div class="col-xl-12">
-                                <div class="wsus__login_form_input">
-                                    <label>Email</label>
-                                    <input type="email" placeholder="Email">
-                                </div>
-                            </div>
-                            <div class="col-xl-12">
-                                <div class="wsus__login_form_input">
-                                    <label>Phone</label>
-                                    <input type="text" placeholder="Phone">
-                                </div>
-                            </div>
-                            <div class="col-xl-12">
-                                <div class="wsus__login_form_input">
-                                    <label>Password</label>
-                                    <input type="password" placeholder="Password">
-                                </div>
-                            </div>
-                            <div class="col-xl-12">
-                                <div class="wsus__login_form_input">
-                                    <label>Confirm Password</label>
-                                    <input type="password" placeholder="Confirm Password">
-                                </div>
-                            </div>
-                            <div class="col-xl-12">
-                                <div class="wsus__login_form_input">
-                                    <div class="form-check">
-                                        <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
-                                        <label class="form-check-label" for="flexCheckDefault"> By clicking
-                                            Create
-                                            account, I agree that I have read and accepted the <a href="#">Terms
-                                                of
-                                                Use</a> and <a href="#">Privacy Policy.</a>
-                                        </label>
+        <div class="container">
+            <div class="row align-items-center">
+                <div class="col-xxl-4 col-md-10 col-lg-8 col-xl-6 m-auto">
+                    <div class="wsus__sign_form_area">
+                        <form action="#">
+                            <h2>Sign Up<span>!</span></h2>
+                            <p class="new_user">Already have an account? <a href="sign_in.html">Sign in</a></p>
+                            <div class="row">
+                                <div class="col-xl-12">
+                                    <div class="wsus__login_form_input">
+                                        <label>Name</label>
+                                        <input type="text" placeholder="Name">
                                     </div>
-                                    <button type="submit" class="common_btn">Sign Up</button>
+                                </div>
+                                <div class="col-xl-12">
+                                    <div class="wsus__login_form_input">
+                                        <label>Email</label>
+                                        <input type="email" placeholder="Email">
+                                    </div>
+                                </div>
+                                <div class="col-xl-12">
+                                    <div class="wsus__login_form_input">
+                                        <label>Phone</label>
+                                        <input type="text" placeholder="Phone">
+                                    </div>
+                                </div>
+                                <div class="col-xl-12">
+                                    <div class="wsus__login_form_input">
+                                        <label>Password</label>
+                                        <input type="password" placeholder="Password">
+                                    </div>
+                                </div>
+                                <div class="col-xl-12">
+                                    <div class="wsus__login_form_input">
+                                        <label>Confirm Password</label>
+                                        <input type="password" placeholder="Confirm Password">
+                                    </div>
+                                </div>
+                                <div class="col-xl-12">
+                                    <div class="wsus__login_form_input">
+                                        <div class="form-check">
+                                            <input class="form-check-input" type="checkbox" value=""
+                                                id="flexCheckDefault">
+                                            <label class="form-check-label" for="flexCheckDefault"> By clicking
+                                                Create
+                                                account, I agree that I have read and accepted the <a href="#">Terms
+                                                    of
+                                                    Use</a> and <a href="#">Privacy Policy.</a>
+                                            </label>
+                                        </div>
+                                        <button type="submit" class="common_btn">Sign Up</button>
+                                    </div>
                                 </div>
                             </div>
-                        </div>
-                    </form>
-                    <p class="or">or</p>
-                    <ul class="social_login d-flex flex-wrap">
-                        <li>
-                            <a href="#">
-                                <span><img src="images/google_icon.png" alt="Google" class="img-fluid"></span>
-                                Google
-                            </a>
-                        </li>
-                    </ul>
-                    <p class="create_account">Don't have an account? <a href="sign_in.html">Create free
-                            account</a></p>
+                        </form>
+                        <p class="or">or</p>
+                        <ul class="social_login d-flex flex-wrap">
+                            <li>
+                                <a href="#">
+                                    <span><img src="images/google_icon.png" alt="Google" class="img-fluid"></span>
+                                    Google
+                                </a>
+                            </li>
+                        </ul>
+                        <p class="create_account">Don't have an account? <a href="sign_in.html">Create free
+                                account</a></p>
+                    </div>
                 </div>
             </div>
         </div>
