--- a/team_details.html
+++ b/team_details.html
@@ -240,10 +240,10 @@
     <!--============================
         TEAM DETAILS START
     =============================-->
-    <div class="wsus__team_details mt_95 xs_mt_75">
+    <div class="wsus__team_details mt_120 xs_mt_100">
         <div class="container">
             <div class="row justify-content-between">
-                <div class="col-xl-5">
+                <div class="col-xxl-5 col-lg-6">
                     <div class="wsus__details_img">
                         <div class="img">
                             <img src="images/team_details_img.jpg" alt="Team details" class="img-fluid">
@@ -276,7 +276,7 @@
                         </li>
                     </ul>
                 </div>
-                <div class="col-xl-6">
+                <div class="col-xxl-6 col-lg-6">
                     <div class="wsus__team_details_area_text">
                         <div class="wsus__team_details_top">
                             <h2>Claire Voyant</h2>
