--- a/index_2.html
+++ b/index_2.html
@@ -19,7 +19,7 @@
     <link rel="stylesheet" href="css/spacing.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/responsive.css">
-    <link rel="stylesheet" href="css/rtl.css">
+    <!-- <link rel="stylesheet" href="css/rtl.css"> -->
 </head>
 
 <body class="home_2">
@@ -273,7 +273,7 @@
                         </a>
                         <div class="wsus__single_service_text">
                             <div class="icon">
-                                <img src="images/service_icon_1.png" alt="Services" class="img-fluid">
+                                <img src="images/service_icon_2.png" alt="Services" class="img-fluid">
                             </div>
                             <a class="title" href="#">Development</a>
                             <p>Morbi libero velit, placerat a suscipit sit amet ornare sit amet enim.</p>
