--- a/sign_up.html
+++ b/sign_up.html
@@ -19,6 +19,7 @@
     <link rel="stylesheet" href="css/spacing.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/responsive.css">
+    <!-- <link rel="stylesheet" href="css/rtl.css"> -->
 </head>
 
 <body>
@@ -243,7 +244,7 @@
     <section class="wsus__sign_up mt_120 xs_mt_100">
         <div class="container">
             <div class="row align-items-center">
-                <div class="col-xxl-4 col-md-10 col-lg-8 col-xl-6 m-auto">
+                <div class="col-md-10 col-lg-8 col-xl-6 m-auto">
                     <div class="wsus__sign_form_area">
                         <form action="#">
                             <h2>Sign Up<span>!</span></h2>
